collapsable infographic section fixed on bottom of homepage

--- a/src/app/component/section/simple-explainer-section/simple-explainer-section.component.scss
+++ b/src/app/component/section/simple-explainer-section/simple-explainer-section.component.scss
@@ -1,5 +1,59 @@
-/*@start home cta buttons*/
+/*@start cta buttons*/
 .btn.btn-secondary {
   margin-top: 1rem;
 }
-/*@end home cta buttons*/
+/*@end cta buttons*/
+
+@media only screen and (min-width: 1024px){
+  :host {
+    background-color: var(--primary-color);
+    z-index: 10;
+    //box-shadow: 0 -2px 10px 5px rgba(0, 0, 0, 0.35);
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+
+    .section {
+      padding: 0 0 20px;
+    }
+
+    h3 {
+      font-family: 'Lato', sans-serif;
+      font-weight: 300;
+    }
+  }
+
+  @media only screen and (min-width: 1440px) {
+    #toggle {
+      transform: translate(-.5rem, 30px);
+
+      > .content {
+        padding: 20px 0;
+      }
+    }
+
+    #explainer-checkbox {
+      display: none;
+
+      label {
+        transition: color 150ms;
+      }
+    }
+
+    #explainer-checkbox:hover,
+    label:hover {
+      cursor: pointer;
+      color: var(--quaternary-color);
+    }
+
+    .section-content {
+      height: 146px;
+      transition: height 250ms ease-in-out;
+    }
+
+    .section-content.expanded {
+      height: calc(100vh - 120px);
+    }
+  }
+}
